--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -9,17 +9,32 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
        <item name="actionBarStyle">@style/Theme.SplashScreen</item>
-
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/splash_background</item>
+    </style>
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">true</item>
-
     </style>
 
-    <style name="AppTheme.NoActionBarLaunch" parent="Theme.SplashScreen">
-        <item name="android:background">@drawable/splash</item>
+
+<!--     Custom Action Bar Style-->
+    <style name="CustomActionBar" parent="Widget.AppCompat.ActionBar">
+        <item name="titleTextStyle">@style/CustomActionBarText</item>
     </style>
+
+    <!-- Custom Text Style -->
+    <style name="CustomActionBarText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">#000</item>
+    </style>
+
 
 </resources>
+<!--    <style name="Theme.MyApp.Splash" parent="Theme.SplashScreen">-->
+<!--        <item name="windowSplashScreenBackground">@color/splash_background</item>-->
+<!--        <item name="windowSplashScreenAnimatedIcon">@drawable/image1</item>-->
+<!--        <item name="windowSplashScreenAnimationDuration">1000</item>-->
+<!--&lt;!&ndash;        <item name="postSplashScreenTheme">@style/Theme.MyApp</item>&ndash;&gt;-->
+<!--    </style>-->
